gccida/c3/update_equiv_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1282:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+40h] [rbp-E0h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1282:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1282:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+40h] [rbp-E0h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1283:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+4Ch] [rbp-D4h] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1283:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1283:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+4Ch] [rbp-D4h] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1327:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                    ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1335:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( rtx)insn[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1356:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)v2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1430:1: error: use of undeclared identifier 'recorded_label_ref_0'; did you mean 'recorded_label_ref'?
recorded_label_ref_0 = 1; 
^~~~~~~~~~~~~~~~~~~~
recorded_label_ref
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:276:12: note: 'recorded_label_ref' declared here
static int recorded_label_ref;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1469:39: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = bb_0->end; insn != ( rtx)bb_0->head[1]; insn = ( rtx)insn[1] ) 
                                      ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1469:67: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = bb_0->end; insn != ( rtx)bb_0->head[1]; insn = ( rtx)insn[1] ) 
                                                                  ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1473:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = insn[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                    ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1492:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
for ( last_link = link; last_link[1]; last_link = ( rtx)last_link[1] ) 
^                       ~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1492:57: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( last_link = link; last_link[1]; last_link = ( rtx)last_link[1] ) 
                                                        ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1498:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
equiv_link = ( rtx)equiv_link[1]; 
                   ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1511:39: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
reg_equiv[regno_1].init_insns = ( rtx)reg_equiv[regno_1].init_insns[1]; 
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1513:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
else if ( ( rtx)insn[1] != equiv_insn ) 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1529:45: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)basic_block_info->data.l[block] = insn[1]; 
                                            ^ ~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1548:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/local-alloc.c:1552:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_equiv_regs/src/obj/local-alloc.o] Error 1
